--- a/lib-badge/build.gradle
+++ b/lib-badge/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 2
-        versionName "1.6.1"
+        versionName "1.6.2"
     }
     buildTypes {
         release {
@@ -23,4 +23,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-annotations:24.2.1'
 }
