--- a/lib-badge/build.gradle
+++ b/lib-badge/build.gradle
@@ -4,24 +4,19 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.nekocode'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion COMPILE_SDK_VERSION.toInteger()
+    buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 24
-        versionCode 2
-        versionName "1.6.2"
+        minSdkVersion 11
+        targetSdkVersion 25
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    lintOptions {
+        abortOnError false
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-annotations:24.2.1'
+    provided "com.android.support:support-annotations:$SUPPORT_LIBS_VERSION"
 }
