--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,20 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath "com.android.tools.build:gradle:3.3.0"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:1.5"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
+    group="com.github.nekocode"
 }
 
 task clean(type: Delete) {
