--- a/lib-badge/build.gradle
+++ b/lib-badge/build.gradle
@@ -1,15 +1,11 @@
-apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.nekocode'
+apply plugin: "com.android.library"
+apply plugin: "com.github.dcendents.android-maven"
 
 android {
-    compileSdkVersion COMPILE_SDK_VERSION.toInteger()
-    buildToolsVersion BUILD_TOOLS_VERSION
-
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 11
-        targetSdkVersion 25
+        targetSdkVersion 28
     }
     lintOptions {
         abortOnError false
@@ -17,6 +13,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    provided "com.android.support:support-annotations:$SUPPORT_LIBS_VERSION"
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    compileOnly "com.android.support:support-annotations:28.0.0"
+}
+
+task androidSourcesJar(type: Jar) {
+    classifier = "sources"
+    baseName = archivesBaseName
+    from android.sourceSets.main.java.srcDirs
+}
+
+artifacts {
+    archives androidSourcesJar
 }
