--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,26 +1,24 @@
-apply plugin: 'com.android.application'
+apply plugin: "com.android.application"
 
 android {
-    compileSdkVersion COMPILE_SDK_VERSION.toInteger()
-    buildToolsVersion BUILD_TOOLS_VERSION
-
+    compileSdkVersion 28
     defaultConfig {
         applicationId "cn.nekocode.badge.sample"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(":lib-badge")
-    compile "com.android.support:appcompat-v7:$SUPPORT_LIBS_VERSION"
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(":lib-badge")
+    implementation "com.android.support:appcompat-v7:28.0.0"
 }
